syntax = "proto3";

import "google/protobuf/timestamp.proto";

package pb;
option go_package = "./pb";

//--------------------------------管理员--------------------------------
message Admin {
  string id = 1;
  string name = 2;
  string email = 3;
  string password =4;
  string created_at = 5;
  string updated_at = 6;
}

message AdminAddReq {
  string name = 2;
  string email = 3;
  string password =4;
}

message AdminAddResp {
}

message AdminUpdateReq {
  string id = 1;
  string name = 2;
  string email = 3;
  string password =4;
}

message AdminUpdateResp {
}

message AdminDeleteReq {
  string id = 1; //id
}

message AdminDeleteResp {
}

message AdminDetailsReq {
  string id = 1; //id
  string account = 2; //用户名
}

message AdminDetailsResp {
  string id = 1;
  string name = 2;
  string email = 3;
  string password =4;
  string created_at = 5;
  string updated_at = 6;
}

message AdminSearchReq {
  int64 pageNo = 1; //pageNo
  int64 pageSize = 2; //pageSize
  string orderField = 3; //排序字段
  string orderParam = 4; //排序方法
  int64 startTime = 5; //开始时间
  int64 endTime = 6; //结束时间
}

message AdminSearchResp {
  int64 total = 1; //总条数
  repeated Admin list = 2; //admin
}

service Exchange {
  //-----------------------管理员-----------------------
  /** 添加管理员 **/
  rpc AdminAdd(AdminAddReq) returns (AdminAddResp);
  /** 更新管理员 **/
  rpc AdminUpdate(AdminUpdateReq) returns (AdminUpdateResp);
  /** 删除管理员 **/
  rpc AdminDelete(AdminDeleteReq) returns (AdminDeleteResp);
  /** 获取管理员 **/
  rpc AdminDetails(AdminDetailsReq) returns (AdminDetailsResp);
  /** 管理员列表 **/
  rpc AdminSearch(AdminSearchReq) returns (AdminSearchResp);

}
